# Quine-Mccluskey-Module

./: .gitignore  CMakeLists.txt  LICENSE  README.md  index.html  legacy codes.c  quine.js  quine.wasm  test min term.txt
Quine-Mccluskey v1.0/: CMakeLists.txt  main.cpp  prime-implicant.cpp  quine-mccluskey v.1.0.cpp
Quine-Mccluskey v1.0/helper_source/: Expression.c  Expression.cpp  ToBinary.cpp  count-1s.c  count-1s.cpp  get-minterms.c  is-exist.c  is-exist.cpp  make-line.c
Quine-Mccluskey v1.0/include/: helper.h  quine.h
Quine-Mccluskey v1.0/source/: display-essential-table.c  display-essential-table.cpp  display-groups.c  display-groups.cpp  display-implicants.c  display-implicants.cpp  essential-implicants.c  essential-implicants.cpp  fill-group-table.c  fill-group-table.cpp  main.c  main.cpp  prime-implicants.c  prime-implicants.cpp  quine-mccluskey v.1.0.cpp  reduce-table.c  reduce-table.cpp
cjson/: Table-to-json.c  groupData-to-json.c  parse-input.c  petrickData-to-json.c  piChart-to-json.c  primeData-to-json.c  qmData-to-json.c
helper_source/: Expression.c  ToBinary.c  absorption.c  add-string.c  array-to-string.c  count-1s.c  create-table.c  digit.c  distributive.c  find-item.c  free-string-array.c  get-input.c  get-minterms.c  is-exist.c  is-subset.c  make-line.c  memory_tracker.c  quine_allocator.c
include/: boolean_algebra.h  display_qm.h  display_tools.h  helper.h  insert_entry.h  int_array_dup.h  memory.h  memory_tracker.h  parse_input.h  petrick.h  qmMinimizer.h  qm_run.h  qmdata_to_json.h  quine.h  read_file.h  string_array.h
source/: check-coverage.c  column-domination.c  create-prime-implicant-chart.c  display-essential-table.c  display-groups.c  display-implicants.c  (+16 more)
(+19 files in other folders)
